styles/styles.module.scss
.container {
  min-height: 100vh;
  padding: 0 0.5rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100vh;
}

.main {
  padding: 5rem 0;
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  .options{
    margin-top:30px;
    .options_item{
      margin-right:25px;
      cursor:pointer;
      position:relative;
      transition:.1s ease-in-out all;
      border-radius:150%;
      width:50px;
      height:50px;
      bottom:0;
      .tooltip {
        visibility: hidden;
        width: 60px;
        background-color: rgb(90, 90, 90);
        color: #fff;
        text-align: center;
        border-radius: 6px;
        padding: 5px 0;
        position: absolute;
        z-index: 1;
        top: 150%;
        left: 50%;
        margin-left: -30px;
        transition:.2s ease-in-out all;
        font-size:10px;
        box-shadow: 0px 2px 3px rgba(30, 31, 30, 0.348);
        @media screen and (max-width:700px){
          visibility: visible;
        }
        &::after {
          content: "";
          position: absolute;
          bottom: 100%;
          left: 50%;
          margin-left: -5px;
          border-width: 5px;
          border-style: solid;
          border-color: transparent transparent rgb(90, 90, 90) transparent;
        }
      }

      &:hover{
        position:relative;
        transition:.1s ease-in-out all;
        bottom:2.5px;
        box-shadow: 0px 2px 3px rgba(139, 253, 0, 0.538);
        .tooltip {
          visibility: visible;
          transition:.2s ease-in-out all;
        }
      }
      &:last-child{
        margin:0;
      }
    }
    .options_item_active{
        position:relative;
        transition:.3s ease-in-out all;
        bottom:2.5px;
        box-shadow: 0px 2px 3px rgba(139, 253, 0, 0.538);
    }
  }

  .selections{
    position:relative;
    transition:.5s ease-in-out all;
    bottom:0;
    text-align:center;
    z-index:10;
    @media screen and (max-width:700px){
      z-index:100;
    }
  }
  .selections_active{
    transition:.5s ease-in-out all;
    position:relative;
    bottom:30vh;
    @media screen and (max-width:700px){
      bottom:0;
    }
  }
  .actions{
    position:fixed;
    bottom:200px;
    text-align:center;
    left:0;
    height:auto;
    z-index:10;
    width:100vw;
    transition:.3s ease-in-out all;
    @media screen and (max-width:700px){
      display:flex;
      align-items:center;
      justify-content:center;
    }
    .actions_item{
      text-align:center;
      display:inline-block;
      position:relative;
      transition:.3s ease-in-out all;
      z-index:10;
      @media screen and (max-width:700px){
        display:block;
      }
    }
    .vs{
      position:relative;
      bottom:-100vh;
      opacity:.7;
      transition:.5s ease-in-out all;
      margin:0 50px;
      @media screen and (max-width:700px){
        margin:25px 0;
        display:block;
      }
    }
    .vs_active{
      bottom:100px;
      transition:.5s ease-in-out all;
      @media screen and (max-width:700px){
        bottom:0;
      }
    }
    .start_over{
      position:relative;
      bottom:-100vh;
      opacity:.7;
      transition:.5s ease-in-out all;
      margin:0 50px;
      cursor:pointer;
    }
    .start_over_active{
      bottom:-50px;
      transition:.5s ease-in-out all;
    }
    .actions_item_left{
      position:relative;
      left:-100vw;
      transition:.5s ease-in-out all;
    }
    .actions_item_left_active{
      left:0;
      transition:.5s ease-in-out all;
    }
    .actions_item_right{
      position:relative;
      right:-100vw;
      transition:.5s ease-in-out all;
    }
    .actions_item_right_active{
      right:0;
      transition:.5s ease-in-out all;
    }
    .actions_text{
      text-transform:uppercase;
    }
  }

  .actions_active{
      @media screen and (max-width:700px){
        height:100vh;
        bottom:0;
        left:0;
        background:#fff;
        z-index:1000;
        transition:.3s ease-in-out all;
      }
  }

  .popup{
    position:fixed;
    width:100vw;
    height:100vh;
    background:rgba(0,0,0,.4);
    left:0;
    top:100vh;
    transition:.3s ease-in-out all;
    display:flex;
    align-items:center;
    justify-content:center;
    z-index:10000;
    @media screen and (max-width:700px){
      background:#fff;
    }
    .popup_background{
      position:relative;
      width:90%;
      height: 90%;
      background-position: center;
      background-repeat: no-repeat;
      background-size: contain;
      text-align:center;
      display:flex;
      align-items:center;
      justify-content:space-around;
      z-index:10000;
    }
    .popup_background_1{
      background-image: url("/icons/win.svg");
      z-index:10000;
      @media screen and (max-width:700px){
        background-image:none;
      }
    }
    .popup_background_2{
      background-image: url("/icons/lose.svg");
      z-index:10000;
      @media screen and (max-width:700px){
        background-image:none;
      }
    }
    .popup_background_3{
      background-image: url("/icons/tie.svg");
      z-index:10000;
      @media screen and (max-width:700px){
        background-image:none;
      }
    }
  }
  .popup_active{
    top:0;
    transition:.3s ease-in-out all;
    z-index:10000;
  }
}

.footer {
  width: 100%;
  height: 100px;
  border-top: 1px solid #eaeaea;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align:center;
}

// .footer a{
//   margin:0 5px;
// }

.title a {
  color: #0070f3;
  text-decoration: none;
}

.title a:hover,
.title a:focus,
.title a:active {
  text-decoration: underline;
}

.title {
  margin: 0;
  // line-height: 1.15;
  font-size: 4rem;
  font-weight:bolder;
}

.title,
.description {
  text-align: center;
}

.description {
  line-height: 1.5;
  font-size: 1.5rem;
}

.code {
  background: #fafafa;
  border-radius: 5px;
  padding: 0.75rem;
  font-size: 1.1rem;
  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
    Bitstream Vera Sans Mono, Courier New, monospace;
}

.grid {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
  max-width: 800px;
  margin-top: 3rem;
}

.card {
  margin: 1rem;
  padding: 1.5rem;
  text-align: left;
  color: inherit;
  text-decoration: none;
  border: 1px solid #eaeaea;
  border-radius: 10px;
  transition: color 0.15s ease, border-color 0.15s ease;
  width: 45%;
}

.card:hover,
.card:focus,
.card:active {
  color: #0070f3;
  border-color: #0070f3;
}

.card h2 {
  margin: 0 0 1rem 0;
  font-size: 1.5rem;
}

.card p {
  margin: 0;
  font-size: 1.25rem;
  line-height: 1.5;
}

.logo {
  height: 1em;
  margin-left: 0.5rem;
}

@media (max-width: 600px) {
  .grid {
    width: 100%;
    flex-direction: column;
  }
}

